Implements filter function correction